src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>GWBase__Prospect_Level__c</fullName>
        <description>Level of Prospect. Calculated based on Total Gifts fields unless Overridden in Override Prospect field.  Change formula to embody client&apos;s donation level rules.</description>
        <formula>IF(OR(ISBLANK(TEXT(GWBase__Override_Prospect_Level__c)) ,  ISPICKVAL(GWBase__Override_Prospect_Level__c, &apos;Do Not Override&apos;)), 

        IF( OR(ISNULL( GWBase__TotalOppAmount__c ),GWBase__TotalOppAmount__c =0),&apos;&apos;, 
            IF(  GWBase__OppAmountLastYear__c  &gt;= 250 ||  GWBase__OppAmountThisYear__c  &gt;= 250 ,&apos;Major Donor&apos;, 
            IF(GWBase__OppAmountLastYear__c  = 0 &amp;&amp; GWBase__OppAmountThisYear__c  = 0, &apos;Lapsed Donor&apos;, &apos;Donor&apos;))), 

 TEXT(GWBase__Override_Prospect_Level__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Level of Prospect. Calculated based on Total Gifts fields unless Overridden in Override Prospect Level field.</inlineHelpText>
        <label>Prospect Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Recurring_Amount__c</fullName>
        <inlineHelpText>The recurring amount received each recurring pay period. For a contact who pays $10 per month to your organization, this value would be $10.</inlineHelpText>
        <label>Recurring Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Recurring_Annualized_Amount__c</fullName>
        <formula>IF( AND( NOT( ISBLANK( GWBase__Recurring_Amount__c ) ),NOT( ISBLANK(  GWBase__Recurring_Payment_Frequency__c  ) ),NOT( ISBLANK(  TEXT(GWBase__Recurring_Payment_Period__c)  ) ) ),

IF(TEXT(GWBase__Recurring_Payment_Period__c) = &apos;Day&apos;, GWBase__Recurring_Amount__c * (365/GWBase__Recurring_Payment_Frequency__c),IF(TEXT(GWBase__Recurring_Payment_Period__c) = &apos;Week&apos;, GWBase__Recurring_Amount__c * (52/GWBase__Recurring_Payment_Frequency__c),IF(TEXT(GWBase__Recurring_Payment_Period__c) = &apos;Month&apos;, GWBase__Recurring_Amount__c * (12/GWBase__Recurring_Payment_Frequency__c),GWBase__Recurring_Amount__c * (1/GWBase__Recurring_Payment_Frequency__c)))),

null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies the annualized total from a recurring payment profile associated with this contact. e.g. for a contact who gives $10 per month, this value would be $120</inlineHelpText>
        <label>Recurring Annualized Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Recurring_Payment_Frequency__c</fullName>
        <inlineHelpText>Specifies the time between recurring payments in the Recurring Payment Frequency and Recurring Payment Period fields (e.g. every 2 weeks, every 1 month).</inlineHelpText>
        <label>Recurring Payment Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Recurring_Payment_Period__c</fullName>
        <inlineHelpText>Specifies the time between recurring payments in the Recurring Payment Frequency and Recurring Payment Period fields (e.g. every 2 weeks, every 1 month).</inlineHelpText>
        <label>Recurring Payment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactEmail__c</fullName>
        <label>Second Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactFirstName__c</fullName>
        <label>Second Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactLastName__c</fullName>
        <label>Second Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactSalutation__c</fullName>
        <label>Second Contact Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GWBase__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Staff_Status__c</fullName>
        <inlineHelpText>Is this contact a staff member?</inlineHelpText>
        <label>Staff Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Total_Household_Gifts__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__TotalOppAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Work_County__c</fullName>
        <label>Work County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifetime_Major_Gift_Goal__c</fullName>
        <label>Lifetime Major Gift Goal</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Major_Donor_Notes__c</fullName>
        <inlineHelpText>Take general notes about this donor our strategy here.</inlineHelpText>
        <label>Major Donor Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Major_Donor_Prospect_Rating__c</fullName>
        <label>Major Donor Prospect Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Major_Donor_Status__c</fullName>
        <label>Major Donor Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Moves_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Moves Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Donors Managed</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>On_Moves_Management_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to make this person available to put on Moves Management teams.</inlineHelpText>
        <label>On Moves Management Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Contact has is an active Salesforce User, link the User account to their Contact record with this field.</inlineHelpText>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Donors</fullName>
        <columns>FULL_NAME</columns>
        <columns>GWBase__OppAmountLastNDays__c</columns>
        <columns>GWBase__OppAmountThisYear__c</columns>
        <columns>GWBase__OppAmountLastYear__c</columns>
        <columns>GWBase__NumberOfClosedOpps__c</columns>
        <columns>GWBase__LastCloseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GWBase__TotalOppAmount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Donors</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Engagement_Level</fullName>
        <columns>FULL_NAME</columns>
        <columns>GWBase__Engagement_Level__c</columns>
        <columns>GWBase__Engagement_Peak__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Engagement Level</label>
    </listViews>
    <listViews>
        <fullName>Moves_Management_Team</fullName>
        <columns>FULL_NAME</columns>
        <columns>User__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>On_Moves_Management_Team__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Moves Management Team</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>Account_00NE0000001BUwEMAW</fullName>
        <active>true</active>
        <field>Account.Moves_Manager__c</field>
        <filterItems>
            <field>Contact.On_Moves_Management_Team__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only Moves Management team members are available. To make someone a Moves Management team member, check the &quot;On Moves Management Team&quot; box on their Contact record.</infoMessage>
        <isOptional>false</isOptional>
        <name>Account_Moves Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_00NE0000000ln8CMAQ</fullName>
        <active>true</active>
        <field>Contact.Moves_Manager__c</field>
        <filterItems>
            <field>Contact.On_Moves_Management_Team__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only Moves Management team members are available. To make someone a Moves Management team member, check the &quot;On Moves Management Team&quot; box on their Contact record.</infoMessage>
        <isOptional>false</isOptional>
        <name>Contact_Moves Manager</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000PyUQMA0_00NE0000000ln86MAA</fullName>
        <active>true</active>
        <field>Moves_Mgmt_Team_Member__c.Team_Member__c</field>
        <filterItems>
            <field>Contact.On_Moves_Management_Team__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only Moves Management team members are available. To make someone a Moves Management team member, check the &quot;On Moves Management Team&quot; box on their Contact record.</infoMessage>
        <isOptional>false</isOptional>
        <name>Moves Management Team Member_Team Member</name>
    </namedFilters>
</CustomObject>